# edge-ai-test-platform

./: .gitignore  CLAUDE.md  Edge-AI-Test-Platform-Plan.md  README.md  pyproject.toml
.claude/skills/: correct-me.md  dig-deeper.md  wrap-up.md
inference_service/: app.py
notes/: a1a-project-init.md  a1b-fastapi-health.md
